Closed Bug 932168 Opened 12 years ago Closed 12 years ago

Bug 906072 completely broke IME context management when password field gets focus

Categories

(Core :: Widget: Gtk, defect)

x86_64
Linux
defect
Not set
blocker

Tracking

()

VERIFIED FIXED
mozilla28
Tracking Status
firefox26 + verified
firefox27 + verified
firefox28 + verified
b2g-v1.2 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod, regression)

Attachments

(2 files)

This is really critical regression of IME handling on GTK when password field has focus!!
Attachment #823857 - Flags: review?(karlt) → review+
Ryan - can you confirm that this landed to central and Masayuki can you please nominate for uplift approval with a risk assessment?
Flags: needinfo?(ryanvm)
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: needinfo?(ryanvm)
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Comment on attachment 823857 [details] [diff] [review] Patch [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 906072, the patch removed necessary code by mistake. User impact if declined: IME is enabled on password field and ime-mode: disabled; field. On desktop, IME should be disabled on such <input> (and <textarea>). Testing completed (on m-c, etc.): This has landed on m-c. And I checked the behavior. (Unfortunately, this cannot be tested by automated test) Risk to taking this patch (and alternatives if risky): The code has been used. If IsEnabled() or GetContext() had a bug, it may cause users cannot use IME unexpectedly. But they are very simple code. String or IDL/UUID changes made by this patch: None.
Attachment #823857 - Flags: approval-mozilla-aurora?
Attached patch Patch for BetaSplinter Review
[Approval Request Comment] See above comment. This patch just replaces widget/gtk -> widget/gtk2 of the patching file path.
Attachment #829141 - Flags: approval-mozilla-beta?
Attachment #823857 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Attachment #829141 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Keywords: verifyme
Is there any help needed for manual testing here? If yes can you please provide some steps in order to reproduce/verify this?
Flags: needinfo?(masayuki)
(In reply to Bogdan Maris, QA [:bogdan_maris] from comment #9) > Is there any help needed for manual testing here? If yes can you please > provide some steps in order to reproduce/verify this? I'm not sure the protocol of QA team, though. This fix can be confirmed only by hand. 1. Install and select IME on Linux (not matter the language, either is okay, Japanese, Korean, Simplified Chinese or Traditional Chinese) 2. Turn on IME on normal field, e.g., user name field of bugzilla and then, you should be able to use IME on it. 3. Move focus to password field. Then, typing printable keys should cause direct input, not passed to IME. E.g., you shouldn't see underline to the mask character (● or *).
Flags: needinfo?(masayuki)
Mozilla/5.0 (X11; Linux x86_64; rv:26.0) Gecko/20100101 Firefox/26.0 Reproduced this issue with Nightly from 2013-10-28. Verified as fixed on Firefox 26 beta 7 (Build ID: 20131122094025): after installed and enabled IME on Linux, no underline on the mask character is shown in the password field for Bugzilla, Quality Mozilla, Facebook, Google, Twitter.
Mozilla/5.0 (X11; Linux x86_64; rv:27.0) Gecko/20100101 Firefox/27.0 Mozilla/5.0 (X11; Linux x86_64; rv:28.0) Gecko/20100101 Firefox/28.0 Verified as fixed on latest Aurora (Build ID: 20131128004001) and Nightly (Build ID: 20131128030201).
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: