Bug 932168 - Use simple IME context when focus field has focus (partially backing out a patch for bug 906072). r=karlt, a=lsblakk